--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -1594,6 +1594,10 @@ body {
                         }
                     }
                 }
+
+                &.keyvalue-value-gap-sm {
+                    gap: 5px;
+                }
             }
 
             .keyvalue-link {
