--- a/react/assets/forus-webshop/scss/includes/blocks/block-showcase.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-showcase.scss
@@ -2,7 +2,7 @@
     --aside-width: 330px;
     position: relative;
     cursor: default;
-    margin: 0 0;
+    margin: 0 0 30px;
 
     .showcase-title {
         font: 700 22px/36px var(--base-font);
