--- a/react/assets/forus-webshop/scss/includes/blocks/product.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/product.scss
@@ -7,6 +7,7 @@
         flex-direction: row;
         gap: 30px;
         margin: 0 0 30px;
+        align-items: flex-start;
 
         .product-photo {
             display: flex;
